@@ -2,6 +2,14 @@
 #include "ASyncTCP.h"
 #include "../main/Logger.h"
 
+/*
+#ifdef WIN32
+	#include <Mstcpip.h>
+#elif defined(__FreeBSD__)
+	#include <netinet/tcp.h>
+#endif
+*/
+
 #define RECONNECT_TIME 30
 
 ASyncTCP::ASyncTCP()
@@ -71,6 +79,71 @@ void ASyncTCP::close()
 	mIos.post(boost::bind(&ASyncTCP::do_close, this));
 }
 
+/*
+bool ASyncTCP::set_tcp_keepalive()
+{
+	int keep_alive_timeout = 10;
+
+#ifdef __OSX__
+	int native_fd = socket->native();
+	int timeout = *keep_alive_timeout;
+	int intvl = 1;
+	int on = 1;
+
+	// Set the timeout before the first keep alive message
+	int ret_sokeepalive = setsockopt(native_fd, SOL_SOCKET, SO_KEEPALIVE, (void*)&on, sizeof(int));
+	int ret_tcpkeepalive = setsockopt(native_fd, IPPROTO_TCP, TCP_KEEPALIVE, (void*)&timeout, sizeof(int));
+	int ret_tcpkeepintvl = setsockopt(native_fd, IPPROTO_TCP, TCP_CONNECTIONTIMEOUT, (void*)&intvl, sizeof(int));
+
+	if (ret_sokeepalive || ret_tcpkeepalive || ret_tcpkeepintvl)
+	{
+		string message("Failed to enable keep alive on TCP client socket!");
+		Logger::error(message, port, host);
+		return false;
+	}
+#elif defined(WIN32)
+	// Partially supported on windows
+	struct tcp_keepalive keepalive_options;
+	keepalive_options.onoff = 1;
+	keepalive_options.keepalivetime = keep_alive_timeout * 1000;
+	keepalive_options.keepaliveinterval = 2000;
+
+	BOOL keepalive_val = true;
+	SOCKET native = mSocket.native();
+	DWORD bytes_returned;
+
+	int ret_keepalive = setsockopt(native, SOL_SOCKET, SO_KEEPALIVE, (const char *)&keepalive_val, sizeof(keepalive_val));
+	int ret_iotcl = WSAIoctl(native, SIO_KEEPALIVE_VALS, (LPVOID)& keepalive_options, (DWORD) sizeof(keepalive_options), NULL, 0,
+		(LPDWORD)& bytes_returned, NULL, NULL);
+
+	if (ret_keepalive || ret_iotcl)
+	{
+		_log.Log(LOG_ERROR, "Failed to set keep alive timeout on TCP client socket!");
+		return false;
+	}
+#else
+	// For *n*x systems
+	int native_fd = mSocket.native();
+	int timeout = keep_alive_timeout;
+	int intvl = 1;
+	int probes = 10;
+	int on = 1;
+
+	int ret_keepalive = setsockopt(native_fd, SOL_SOCKET, SO_KEEPALIVE, (void*)&on, sizeof(int));
+	int ret_keepidle = setsockopt(native_fd, SOL_TCP, TCP_KEEPIDLE, (void*)&timeout, sizeof(int));
+	int ret_keepintvl = setsockopt(native_fd, SOL_TCP, TCP_KEEPINTVL, (void*)&intvl, sizeof(int));
+	int ret_keepinit = setsockopt(native_fd, SOL_TCP, TCP_KEEPCNT, (void*)&probes, sizeof(int));
+
+	if (ret_keepalive || ret_keepidle || ret_keepintvl || ret_keepinit)
+	{
+		_log.Log(LOG_ERROR, "Failed to set keep alive timeout on TCP client socket!");
+		return false;
+	}
+#endif
+	return true;
+}
+*/
+
 void ASyncTCP::read()
 {
 	if(!mIsConnected) return;
@@ -92,6 +165,12 @@ void ASyncTCP::handle_connect(const boost::system::error_code& error)
 	if (!error) {
 		// we are connected!
 		mIsConnected = true;
+
+		//Enable keep alive
+		boost::asio::socket_base::keep_alive option(true);
+		mSocket.set_option(option);
+
+		//set_tcp_keepalive();
 
 		OnConnect();
 
