@@ -2,36 +2,31 @@
 
 #include <deque>
 #include <iostream>
+#include "ASyncTCP.h"
 #include "DomoticzHardware.h"
 
-class RFXComTCP: public CDomoticzHardwareBase
+class RFXComTCP : public CDomoticzHardwareBase, ASyncTCP
 {
 public:
 	RFXComTCP(const int ID, const std::string IPAddress, const unsigned short usIPPort);
 	~RFXComTCP(void);
 
-	void write(const char *data, size_t size);
-	bool isConnected(){ return m_socket!= INVALID_SOCKET; };
 	void WriteToHardware(const char *pdata, const unsigned char length);
-public:
-	// signals
-	boost::signals2::signal<void()>	sDisconnected;
-	static const int readBufferSize=512;
 private:
-	void disconnect();
-	int m_retrycntr;
 	bool StartHardware();
 	bool StopHardware();
 protected:
 	std::string m_szIPAddress;
 	unsigned short m_usIPPort;
 
+	void OnConnect();
+	void OnDisconnect();
+	void OnData(const unsigned char *pData, size_t length);
+	void OnError(const std::exception e);
+	void OnError(const boost::system::error_code& error);
+
 	void Do_Work();
-	bool ConnectInternal();
 	boost::shared_ptr<boost::thread> m_thread;
 	volatile bool m_stoprequested;
-	sockaddr_in m_addr;
-	int m_socket;
-	unsigned char mBuffer[readBufferSize];
 };
 
