@@ -335,10 +335,10 @@ function RefreshFavorites()
 								}
 								else if (item.SwitchType == "Contact") {
 									if (item.Status == 'Closed') {
-										img='<img src="images/contact48.png" height="40" width="40">';
+										img='<img src="images/contact48.png" onclick="ShowLightLog(' + item.idx + ',\'' + item.Name  + '\', \'#dashcontent\', \'ShowFavorites\');" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40" width="40" >';
 									}
 									else {
-										img='<img src="images/contact48_open.png" height="40" width="40">';
+										img='<img src="images/contact48_open.png" onclick="ShowLightLog(' + item.idx + ',\'' + item.Name  + '\', \'#dashcontent\', \'ShowFavorites\');" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40" width="40">';
 									}
 								}
 								else if (item.SwitchType == "Blinds") {
@@ -1609,10 +1609,10 @@ function ShowFavorites()
 							}
 							else if (item.SwitchType == "Contact") {
 								if (item.Status == 'Closed') {
-									xhtm+='\t      <td id="img"><img src="images/contact48.png" height="40" width="40"></td>\n';
+									xhtm+='\t      <td id="img"><img src="images/contact48.png" onclick="ShowLightLog(' + item.idx + ',\'' + item.Name  + '\', \'#dashcontent\', \'ShowFavorites\');" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40" width="40"></td>\n';
 								}
 								else {
-									xhtm+='\t      <td id="img"><img src="images/contact48_open.png" height="40" width="40"></td>\n';
+									xhtm+='\t      <td id="img"><img src="images/contact48_open.png" onclick="ShowLightLog(' + item.idx + ',\'' + item.Name  + '\', \'#dashcontent\', \'ShowFavorites\');" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40" width="40"></td>\n';
 								}
 							}
 							else if (item.SwitchType == "Blinds") {
