@@ -44,6 +44,7 @@ Version 1.0.xxxx (April xxth 2014)
 - Implemented: RFXtrx TH12 soil sensor (Imagintronix)
 - Fixed: (to be verified) possible crash when sending emails when no internet connection was available
 - Implemented: Option in settings to choose default or holiday timer plan (maybe custom plans later)
+- Implemented: Dashboard, clicking on the 'contact' switch icon now displays the switch log
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
